@@ -2,6 +2,8 @@ OVN v22.03.2 - xx xxx xxxx
 --------------------------
   - Support (LSP.options:qos_min_rate) to guarantee minimal bandwidth available
     for a logical port.
+  - Added support for setting the Next server IP in the DHCP header
+    using the private DHCP option - 253 in native OVN DHCPv4 responder.
 
 OVN v22.03.1 - 03 Jun 2022
 --------------------------
